<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- 首页底部导航 -->
	<string name="main_home_text">首页</string>
	<string name="main_order_text">订单</string>
	<string name="main_shop_text">购物车</string>
	<string name="main_help_text">帮助</string>
	<string name="main_me_text">我的</string>
    
	<!-- e recommend -->
	<string name="e_recommend_all_shop">全部商品</string>
	<string name="item_more_shop">更多商品></string>
	
	<!-- 全部商品分类 -->
	<string name="all_shop_local">本地鲜</string>
	<string name="all_shop_little">小分量</string>
	<string name="all_shop_all">材米油盐酱醋</string>
	<string name="all_shop_">材米油盐酱醋</string>
	
	
	<!-- reg -->
	<string name="reg_user_send_code">发送验证码</string>
	<string name="reg_user_agree">注册账号就视为已阅读并同意</string>
	<string name="reg_user_agree_detail">《e家生活用户协议》</string>
	<string name="reg_user_ok">确定</string>
	
    <!-- 顶部导航栏 -->
	<string name="top_login_or_reg">登陆/注册</string>
	<string name="top_add_address">添加新地址</string>
    
    <!-- 公共 -->
    <string name="app_name">私教助手</string>
    <string name="common_abnormal_server">服务器异常&#8230;</string>
    <string name="common_request_more">查看更多&#8230;</string>
    <string name="common_requesting">正在请求&#8230;</string>
    <string name="common_requesting_time_out">请求超时&#8230;</string>
    <string name="common_querying">正在查询&#8230;</string>
    <string name="common_buffering">正在缓冲&#8230;</string>
    <string name="common_loading">正在加载&#8230;</string>
    <string name="common_logining">正在登录&#8230;</string>
    <string name="common_sending">正在发送&#8230;</string>
    <string name="common_downloading">正在下载&#8230;</string>
    <string name="common_uploading">正在上传&#8230;</string>
    <string name="common_openning">正在开启&#8230;</string>
    <string name="common_exitting">正在退出&#8230;</string>
    <string name="common_clearing">正在清理&#8230;</string>
    <string name="common_saving">正在保存&#8230;</string>
    <string name="common_verifying">正在验证&#8230;</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_btn_start">启动</string>
    <string name="common_btn_save">保存</string>
    <string name="common_btn_enter">进入</string>
    <string name="common_btn_finish">完成</string>
    <string name="common_btn_set">设置</string>
    <string name="common_btn_goto_set">去设置</string>
    <string name="common_btn_detail">详情</string>
    <string name="common_btn_delete">删除</string>
    <string name="common_text_title">标题</string>
    <string name="common_text_title_empty">请输入标题</string>
    <string name="common_text_content">正文</string>
    <string name="common_text_content_empty">请输入正文</string>
    <string name="common_text_publish">发布</string>
    <string name="common_text_search">搜索</string>
    <string name="common_text_order">开通</string>
    <string name="common_text_send">发送</string>
    <string name="msg_isnull">发送信息为空！</string>
    <string name="common_network_unavalible">请打开您的网络连接</string>
    <string name="common_text_tips">提示</string>
    <string name="dialog_message_exitapp">确认退出？</string>
    <string name="dialog_choose_Other">其他</string>
    <string name="dialog_choose_pic_takephoto">拍照</string>
    <string name="dialog_choose_pic_formlocal">从本地选择</string>
    <string name="dialog_load_draff">是否继续编辑草稿？</string>
    <string name="dialog_save_draff">是否保存为草稿？</string>
    <string name="dialog_login_by_other">您的帐号已在其他地方登录</string>

    <!-- 错误码 -->

    <string name="error">请求失败！参数错误</string>
    <string name="error_401_not_auth">帐号或密码错误</string>
    <string name="error_520_time_out">网络不给力，请稍后重试</string>
    <string name="common_error_tips">操作失败,错误代号:%s</string>

</resources>