<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/top_title1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <com.elife.diy.EditTextWithDel
            android:id="@+id/et_phone"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.70"
            android:background="@drawable/corners_bg_green"
            android:singleLine="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/corners_bg_reg0_bule"
            android:text="@string/reg_user_send_code" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_bg_green"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/tb_agree"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/reg_agree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/reg_user_agree"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/reg_user_agree_detail"
            android:textColor="@color/top_title"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/reg_user_ok"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/corners_bg_reg0_bule" />

</LinearLayout>