<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ysh_main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <include layout="@layout/top_title2"/>
    <FrameLayout
        android:id="@+id/ysh_main_content_frame"
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:background="@drawable/ysh_tab_bg"
        android:orientation="horizontal"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/tab_home_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tab_home_btn"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/main_tab_home_selector" />

            <TextView
                android:id="@+id/tab_home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_home_text"
                android:textColor="@color/ysh_tab_font_selector"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_order_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/main_tab_order_selector" />

            <TextView
                android:id="@+id/tab_kinds_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_order_text"
                android:textColor="@color/ysh_tab_font_selector"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_shop_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/main_tab_shop_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_shop_text"
                android:textColor="@color/ysh_tab_font_selector"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_near_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tab_near_btn"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/main_tab_help_selector" />

            <TextView
                android:id="@+id/tab_near_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_text_publish"
                android:textColor="@color/ysh_tab_font_selector"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_person_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tab_person_btn"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ysh_tab_person_selector" />

            <TextView
                android:id="@+id/tab_person_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_text_publish"
                android:textColor="@color/ysh_tab_font_selector"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>